--- a/SobreNós.html
+++ b/SobreNós.html
@@ -7,6 +7,7 @@
     <title>Sobre NósS</title>
   </head>
   <body>
+    <hr />
     <h1>SOBRE NÓS</h1>
     <ul>
       <li>
@@ -19,7 +20,9 @@
       height="600"
       alt=""
     />
-    <h3>
+    <small>imagem institucional da empresa </small>
+
+    <h3 style="font: 700">
       A <mark>DbsOutlier<sup>®</sup></mark>
       é uma empresa especializada no mercado de relógios, que se destaca por
       oferecer aos seus clientes uma ampla variedade de modelos de alta
@@ -32,5 +35,6 @@
       excelência, investindo em novas tecnologias e aprimorando seus processos
       de produção para garantir a satisfação plena de seus clientes.
     </h3>
+    <hr />
   </body>
 </html>
