--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>DbsOutlier®</title>
   </head>
   <body>
+    
     <img width="100" src="PhotoRoom-20230224_142529.png" alt="" />
     <h1>DBS<strong style="color: rgb(24, 128, 146)">OUTLIER</strong></h1>
+    
     <img
-      width="350"
+      width="1520" height="700"
       src="https://images.pexels.com/photos/9561318/pexels-photo-9561318.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
       alt=""
     />
+    <sub>"Nossa Meta e marcar o seu Tempo" </sub>
     <h2>
       Encontre já os <strong style="color: blue">Relógios</strong> mais
       <strong style="color: blue">Elegantes</strong> e Precisos em nossa página!
     </h2>
+  
     <p>
       <i
         >Se você é uma pessoa que valoriza a elegância e a precisão, não pode
@@ -26,16 +30,25 @@
         perfeitos para qualquer ocasião. Não perca mais nenhum minuto sem um
         relógio que combine com seu estilo e atenda às suas necessidades. Visite
         nossa página agora e escolha o seu favorito!</i
-      >
+    ><blockquote><u>"Tempo e dinheiro, então não desperdice mais o seu!"</u></blockquote>
     </p>
+    <hr>
+  
     <ul>
       <li>
         <h1>
-          <a href="SobreNós.html" title="Um pouco mais sobre a empresa!]"
+          <a href="SobreNós.html" title="Um pouco mais sobre a empresa!"
             >SOBRE NÓS</a
           >
         </h1>
       </li>
+      <LI>
+        <h1>
+           <a href="nossosprodutos.html">NOSSOS PRODUTOS</a>
+        </h1>
+      </LI>
     </ul>
+    <hr>
+    <H2>DEIXE SUA SUGESTÃO<input type="text"></H2>
   </body>
 </html>
